CV-2 changed yaml and optional skills
changed yamel to not use hythens and soley rely on indentations and
makes the skill definition optional

--- a/input/html/default.html.jinja
+++ b/input/html/default.html.jinja
@@ -327,15 +327,15 @@
         {% endif %}
 
 
+        {% if skills %}
         <h2 style="page-break-before: always;">Skills</h2>
         <hr />
         <ul>
-        {% for category in skills %}
-            {% for name, items in category.items() %}
-                <li><strong>{{ name }}:</strong> {{ items }}</li>
+            {% for name, items in skills.items() %}
+            <li><strong>{{ name }}:</strong> {{ items }}</li>
             {% endfor %}
-        {% endfor %}
         </ul>
+        {% endif %}
 
         {# Qualifications #}
         {% if awarding_bodies %}
