CV-3 removes spacer in html
this removes the issue of where the skills section will always start at
the top of a new page. it only gets annoying when you start listing
multiple projects so i decided to upload it as a PR just incase

--- a/input/html/default.html.jinja
+++ b/input/html/default.html.jinja
@@ -328,7 +328,7 @@
 
 
         {% if skills %}
-        <h2 style="page-break-before: always;">Skills</h2>
+        <h2>Skills</h2>
         <hr />
         <ul>
             {% for name, items in skills.items() %}
